Implement LinkedIn recommendations carousel in index.html and enhance app carousel functionality in script.js. Update styles in styles.css for new carousel design and add download link for Sudoku game in misc.html. Include new recommendation images in media directory.

--- a/index.html
+++ b/index.html
@@ -65,24 +65,22 @@
     </section>
 
     <section id="about" class="section">
-      <div class="container grid-2">
+      <div class="container">
         <div>
           <h2 class="section-title">About</h2>
           <p>
-            I’m a software engineer focused on delivering measurable impact with thoughtful UX, clean architecture,
-            and dependable delivery. I value clarity, performance, and maintainability.
+            Lead like a mentor, learn like a first-year student, and I believe there's always room for
+            improvement (and coffee). Writing clean, well-documented, and tested code is my
+            superpower - following industry standards is just my idea of fun. Always upgrading
+            myself, whether it's a new tech stack or just my debugging patience.
           </p>
           <p>
-            I’ve led implementations across frontend and backend, collaborating with design, product, and infra teams.
-            Due to confidentiality, I describe outcomes and scope without naming clients.
+            I’m a software engineer focused on delivering measurable impact with thoughtful UX, clean architecture, and
+            dependable delivery. I value clarity, performance, and maintainability. I’ve led implementations across
+            frontend and backend, collaborating with design, product, and infra teams.
           </p>
         </div>
-        <ul class="highlights">
-          <li>Built architecture from scratch to collect and pipeline ~1.5B data points periodically from client sites
-            to AWS, secured over VPN; designed ingestion, storage, and processing flows for reliability and scale.</li>
-          <li>Led code quality initiative across a large legacy codebase; resolved ~84% violations and refactored
-            critical paths to significantly improve performance and maintainability.</li>
-        </ul>
+     
       </div>
     </section>
 
@@ -90,17 +88,15 @@
       <div class="container">
         <h2 class="section-title">Skills</h2>
         <ul class="chips">
-          <li>HTML5</li>
-          <li>CSS3</li>
           <li>JavaScript (ES6+)</li>
-          <li>TypeScript</li>
-          <li>React</li>
+          <li>PHP (8.2+)</li>
+          <li>Elasticsearch (7+)</li>
           <li>Node.js</li>
-          <li>REST</li>
-          <li>Performance</li>
-          <li>Accessibility</li>
-          <li>Testing</li>
-          <li>CI/CD</li>
+          <li>MySQL</li>
+          <li>PostgreSQL</li>
+          <li>Redis</li>
+          <li>AWS</li>
+          <li>Docker</li>
         </ul>
       </div>
     </section>
@@ -112,47 +108,29 @@
         <div class="cards">
           <article class="card">
             <div class="card-head">
-              <h3>Enterprise Analytics Dashboard</h3>
-              <span class="tag">Confidential</span>
+              <h3>System Design &amp; Implementation</h3>
+              <span class="tag">Organization</span>
             </div>
             <p>
-              Built a modular analytics suite for a global enterprise. Focus on performance and role-based access.
+              Built architecture from scratch to collect and pipeline ~1.5B data points periodically from client sites
+              to AWS, secured over VPN; designed ingestion, storage, and processing flows for reliability and scale.
             </p>
             <ul class="meta">
-              <li>Role: Full‑stack engineer</li>
-              <li>Impact: 30% faster reporting, 99.95% uptime</li>
-              <li>Stack: React, Node.js, Postgres</li>
+              <li>Role: Lead Engineer</li>
             </ul>
           </article>
 
           <article class="card">
             <div class="card-head">
-              <h3>E‑commerce Optimization</h3>
-              <span class="tag">Confidential</span>
+              <h3>Code Quality Improvement</h3>
+              <span class="tag">Organization</span>
             </div>
             <p>
-              Led performance and UX initiatives for a high-traffic storefront. Implemented code-splitting and checkout
-              UX.
+              Led code quality initiative across a large legacy codebase; resolved ~84% violations and refactored
+              critical paths to significantly improve performance and maintainability.
             </p>
             <ul class="meta">
-              <li>Role: Frontend lead</li>
-              <li>Impact: +18% conversion, -40% LCP</li>
-              <li>Stack: React, TypeScript</li>
-            </ul>
-          </article>
-
-          <article class="card">
-            <div class="card-head">
-              <h3>Internal Design System</h3>
-              <span class="tag">Confidential</span>
-            </div>
-            <p>
-              Created an accessible component library and tokens to unify UI across multiple apps.
-            </p>
-            <ul class="meta">
-              <li>Role: UI engineer</li>
-              <li>Impact: 50% faster feature delivery</li>
-              <li>Stack: Web Components, CSS</li>
+              <li>Role: Technical Lead</li>
             </ul>
           </article>
         </div>
@@ -173,7 +151,8 @@
           </article>
 
           <article class="award-card">
-            <img class="award-img" src="media/awards/Competency_Certificate_Gobinda_Nandi.jpg" alt="Certificate preview" loading="lazy">
+            <img class="award-img" src="media/awards/Competency_Certificate_Gobinda_Nandi.jpg" alt="Certificate preview"
+              loading="lazy">
             <div>
               <h3 class="award-title">Competency Certificate - Comviva</h3>
               <p class="award-desc">16th May 2023</p>
@@ -188,6 +167,79 @@
             </div>
           </article>
 
+        </div>
+      </div>
+    </section>
+
+    <section id="recommendations" class="section">
+      <div class="container">
+        <h2 class="section-title">LinkedIn Recommendations</h2>
+        <div class="recommendations-carousel-wrapper">
+          <div class="recommendations-carousel">
+            <div class="recommendations-carousel-container">
+              <div class="recommendations-carousel-slides">
+                <img src="media/recommendations/1.png" alt="LinkedIn Recommendation 1" loading="lazy" decoding="async">
+                <img src="media/recommendations/2.png" alt="LinkedIn Recommendation 2" loading="lazy" decoding="async">
+                <img src="media/recommendations/3.png" alt="LinkedIn Recommendation 3" loading="lazy" decoding="async">
+                <img src="media/recommendations/4.png" alt="LinkedIn Recommendation 4" loading="lazy" decoding="async">
+                <img src="media/recommendations/5.png" alt="LinkedIn Recommendation 5" loading="lazy" decoding="async">
+                <img src="media/recommendations/6.png" alt="LinkedIn Recommendation 6" loading="lazy" decoding="async">
+                <img src="media/recommendations/7.png" alt="LinkedIn Recommendation 7" loading="lazy" decoding="async">
+                <img src="media/recommendations/8.png" alt="LinkedIn Recommendation 8" loading="lazy" decoding="async">
+                <img src="media/recommendations/9.png" alt="LinkedIn Recommendation 9" loading="lazy" decoding="async">
+                <img src="media/recommendations/10.png" alt="LinkedIn Recommendation 10" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/11.png" alt="LinkedIn Recommendation 11" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/12.png" alt="LinkedIn Recommendation 12" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/13.png" alt="LinkedIn Recommendation 13" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/14.png" alt="LinkedIn Recommendation 14" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/15.png" alt="LinkedIn Recommendation 15" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/16.png" alt="LinkedIn Recommendation 16" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/17.png" alt="LinkedIn Recommendation 17" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/18.png" alt="LinkedIn Recommendation 18" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/19.png" alt="LinkedIn Recommendation 19" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/20.png" alt="LinkedIn Recommendation 20" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/21.png" alt="LinkedIn Recommendation 21" loading="lazy"
+                  decoding="async">
+                <img src="media/recommendations/22.png" alt="LinkedIn Recommendation 22" loading="lazy"
+                  decoding="async">
+              </div>
+            </div>
+            <div class="recommendations-carousel-dots">
+              <button class="recommendation-dot active" data-slide="0"></button>
+              <button class="recommendation-dot" data-slide="1"></button>
+              <button class="recommendation-dot" data-slide="2"></button>
+              <button class="recommendation-dot" data-slide="3"></button>
+              <button class="recommendation-dot" data-slide="4"></button>
+              <button class="recommendation-dot" data-slide="5"></button>
+              <button class="recommendation-dot" data-slide="6"></button>
+              <button class="recommendation-dot" data-slide="7"></button>
+              <button class="recommendation-dot" data-slide="8"></button>
+              <button class="recommendation-dot" data-slide="9"></button>
+              <button class="recommendation-dot" data-slide="10"></button>
+              <button class="recommendation-dot" data-slide="11"></button>
+              <button class="recommendation-dot" data-slide="12"></button>
+              <button class="recommendation-dot" data-slide="13"></button>
+              <button class="recommendation-dot" data-slide="14"></button>
+              <button class="recommendation-dot" data-slide="15"></button>
+              <button class="recommendation-dot" data-slide="16"></button>
+              <button class="recommendation-dot" data-slide="17"></button>
+              <button class="recommendation-dot" data-slide="18"></button>
+              <button class="recommendation-dot" data-slide="19"></button>
+              <button class="recommendation-dot" data-slide="20"></button>
+              <button class="recommendation-dot" data-slide="21"></button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
