--- a/misc.html
+++ b/misc.html
@@ -115,6 +115,9 @@
                 Open source &mdash; <a href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">View
                   on GitHub</a>
               </p>
+              <div class="cta">
+                <a class="btn primary" href="media/apps/Sudoku.zip" download="Sudoku.zip">Download Game</a>
+              </div>
             </div>
             <div class="misc-media">
               <img src="media/apps/soduko.jpg" alt="Sudoku for Windows screenshot" 
