Remove apps.html and add experience.html to showcase professional experience. Update navigation links in blogs.html, books.html, and courses.html to point to the new home and experience pages. Modify index.html to reflect changes in project and experience sections. Introduce products.html for apps and extensions, enhancing overall portfolio structure.

--- a/courses.html
+++ b/courses.html
@@ -50,8 +50,8 @@
       <div class="container">
         <nav class="breadcrumb" aria-label="Breadcrumb">
           <ol>
-            <li><a href="#">Career</a></li>
-            <li><a href="#">Achievements</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Miscellaneous</a></li>
             <li aria-current="page">Courses & Certifications</li>
           </ol>
         </nav>
