--- a/experience.html
+++ b/experience.html
@@ -50,8 +50,8 @@
       <div class="container">
         <nav class="breadcrumb" aria-label="Breadcrumb">
           <ol>
-            <li><a href="#">Career</a></li>
-            <li aria-current="page">Projects</li>
+            <li><a href="index.html">Home</a></li>
+            <li aria-current="page">Experience</li>
           </ol>
         </nav>
         <h1 class="section-title">Delivery Highlights [w/o Naming Clients]</h1>
