--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <p class="sub reveal">Building reliable, performant, and accessible web applications. Confidential client work
             anonymized.</p>
           <div class="cta reveal">
-            <a class="btn primary" href="#projects">View Projects</a>
+            <a class="btn primary" href="#projects">View Experience</a>
           </div>
         </div>
         <div class="hero-badge reveal" aria-hidden="true">
@@ -103,7 +103,7 @@
 
     <section id="projects" class="section">
       <div class="container">
-        <h2 class="section-title">Featured Projects <a href="projects.html" class="btn ghost"
+        <h2 class="section-title">Featured Experience <a href="experience.html" class="btn ghost"
             style="margin-left:8px;padding:4px 8px;">View all</a></h2>
         <div class="cards">
           <article class="card">
