--- a/blogs.html
+++ b/blogs.html
@@ -50,8 +50,7 @@
       <div class="container">
         <nav class="breadcrumb" aria-label="Breadcrumb">
           <ol>
-            <li><a href="#">Career</a></li>
-            <li><a href="#">Achievements</a></li>
+            <li><a href="index.html">Home</a></li>
             <li aria-current="page">Blogs</li>
           </ol>
         </nav>
