--- a/products.html
+++ b/products.html
@@ -50,12 +50,11 @@
       <div class="container">
         <nav class="breadcrumb" aria-label="Breadcrumb">
           <ol>
-            <li><a href="#">Career</a></li>
-            <li><a href="#">Achievements</a></li>
-            <li aria-current="page">Apps</li>
+            <li><a href="index.html">Home</a></li>
+            <li aria-current="page">Products</li>
           </ol>
         </nav>
-
+        <h2 class="section-title">Apps</h2>
         <div class="cards apps-grid">
           <article class="card app-card">
             <div class="app-content">
@@ -130,7 +129,77 @@
             </div>
           </article>
         </div>
-
+        <br>
+        <h2 class="section-title">Extensions & Plugins</h2>
+        <div class="cards extensions-grid">
+          <article class="card misc-card">
+            <div class="misc-content">
+              <div class="app-row">
+                <div class="app-head">
+                  <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Microsoft icon"
+                    loading="lazy" decoding="async">
+                  <div>
+                    <h3 style="text-align: left;">
+                      <a class="book-link" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate"
+                        target="_blank" rel="noopener" style="text-align: left; display: inline-block;">DocuMate</a>
+                    </h3>
+                    <span class="tag">VS Code Extension</span>
+                  </div>
+                </div>
+                <img class="app-icon-lg" src="media/extension/DocuMate_logo.png" alt="DocuMate extension logo"
+                loading="lazy" decoding="async">
+              </div>
+              <p class="misc-description">
+                A powerful VS Code extension designed to automate and streamline code documentation for PHP and
+                JavaScript. Generates class, method, and property documentation comments with customizable author details,
+                versioning, and copyright information.
+              </p>
+              <p class="misc-release-info">Released on March 22, 2025</p>
+              <div class="cta">
+                <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate"
+                  target="_blank" rel="noopener">View on VS Code Marketplace</a>
+              </div>
+            </div>
+           
+          </article>
+        </div>
+        <br>
+        <h2 class="section-title">Game</h2>
+        <div class="cards game-grid">
+          <article class="card misc-card">
+            <div class="misc-content">
+              <div class="app-row">
+                <div class="app-head">
+                  <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Windows icon" loading="lazy"
+                    decoding="async">
+                  <div>
+                    <h3>
+                      <a class="book-link" href="https://github.com/inandi/sudoku-windows" target="_blank"
+                        rel="noopener">Sudoku for Windows</a>
+                    </h3>
+                    <span class="tag">Windows Game</span>
+                  </div>
+                </div>
+              </div>
+              <p class="misc-description">
+                A classic Sudoku game for Windows, originally developed in 2010 using Visual Basic 6. Features multiple
+                difficulty levels, a clean and intuitive interface, and instant validation of moves. Designed for offline
+                play with a focus on performance and simplicity.
+              </p>
+              <p class="misc-release-info">
+                Open source &mdash; <a href="https://github.com/inandi/sudoku-windows" target="_blank" rel="noopener">View
+                  on GitHub</a>
+              </p>
+              <div class="cta">
+                <a class="btn primary" href="media/apps/Sudoku.zip" download="Sudoku.zip">Download Game</a>
+              </div>
+            </div>
+            <div class="misc-media">
+              <img src="media/apps/soduko.jpg" alt="Sudoku for Windows screenshot" 
+                   class="game-screenshot" loading="lazy" decoding="async">
+            </div>
+          </article>
+        </div>
       </div>
     </section>
   </main>
