--- a/products.html
+++ b/products.html
@@ -132,6 +132,35 @@
         <br>
         <h2 class="section-title">Extensions & Plugins</h2>
         <div class="cards extensions-grid">
+
+          <article class="card misc-card">
+            <div class="misc-content">
+              <div class="app-row">
+                <div class="app-head">
+                  <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Microsoft icon"
+                    loading="lazy" decoding="async">
+                  <div>
+                    <h3 style="text-align: left;">
+                      <a class="book-link" href="https://marketplace.visualstudio.com/items?itemName=iNandi.prompilot"
+                        target="_blank" rel="noopener" style="text-align: left; display: inline-block;">Prompilot</a>
+                    </h3>
+                    <span class="tag">VS Code Extension</span>
+                  </div>
+                </div>
+                <img class="app-icon-lg" src="media/extension/prompilot_logo.png" alt="Prompilot extension logo"
+                loading="lazy" decoding="async">
+              </div>
+              <p class="misc-description">
+                Tired of retyping the same AI prompts over and over? Prompilot makes it effortless to save, organize, and reuse your favorite AI instructions with just one click!
+              </p>
+              <p class="misc-release-info">Released on December 7, 2025</p>
+              <div class="cta">
+                <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.prompilot"
+                  target="_blank" rel="noopener">View on VS Code Marketplace</a>
+              </div>
+            </div>
+          </article>
+
           <article class="card misc-card">
             <div class="misc-content">
               <div class="app-row">
@@ -160,8 +189,8 @@
                   target="_blank" rel="noopener">View on VS Code Marketplace</a>
               </div>
             </div>
-           
           </article>
+   
         </div>
         <br>
         <h2 class="section-title">Game</h2>
