Add StringScope VS Code extension to products.html with detailed description and link. Include new StringScope logo image in media directory.

--- a/products.html
+++ b/products.html
@@ -141,6 +141,34 @@
                     loading="lazy" decoding="async">
                   <div>
                     <h3 style="text-align: left;">
+                      <a class="book-link" href="https://marketplace.visualstudio.com/items?itemName=iNandi.stringscope"
+                        target="_blank" rel="noopener" style="text-align: left; display: inline-block;">StringScope</a>
+                    </h3>
+                    <span class="tag">VS Code Extension</span>
+                  </div>
+                </div>
+                <img class="app-icon-lg" src="media/extension/StringScope_logo.png" alt="StringScope extension logo"
+                loading="lazy" decoding="async">
+              </div>
+              <p class="misc-description">
+                Need to quickly check string length, character indices, or ASCII values? StringScope provides instant string analysis right in your VS Code status bar with detailed character information at your fingertips!
+              </p>
+              <p class="misc-release-info">Released on December 7, 2025</p>
+              <div class="cta">
+                <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.stringscope"
+                  target="_blank" rel="noopener">View on VS Code Marketplace</a>
+              </div>
+            </div>
+          </article>
+
+          <article class="card misc-card">
+            <div class="misc-content">
+              <div class="app-row">
+                <div class="app-head">
+                  <img class="app-icon" src="media/extension/microsoft-svgrepo-com.svg" alt="Microsoft icon"
+                    loading="lazy" decoding="async">
+                  <div>
+                    <h3 style="text-align: left;">
                       <a class="book-link" href="https://marketplace.visualstudio.com/items?itemName=iNandi.prompilot"
                         target="_blank" rel="noopener" style="text-align: left; display: inline-block;">Prompilot</a>
                     </h3>
