Update products.html to include links to VSX Registry for StringScope, Prompilot, and Documate extensions, enhancing visibility and accessibility of the extensions.

--- a/products.html
+++ b/products.html
@@ -155,8 +155,8 @@
               </p>
               <p class="misc-release-info">Released on December 7, 2025</p>
               <div class="cta">
-                <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.stringscope"
-                  target="_blank" rel="noopener">View on VS Code Marketplace</a>
+                <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.stringscope" target="_blank" rel="noopener">View on VS Code Marketplace</a>
+                <a class="btn primary" href="https://open-vsx.org/extension/iNandi/stringscope" target="_blank" rel="noopener">View on VSX Registry</a>
               </div>
             </div>
           </article>
@@ -183,8 +183,8 @@
               </p>
               <p class="misc-release-info">Released on December 7, 2025</p>
               <div class="cta">
-                <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.prompilot"
-                  target="_blank" rel="noopener">View on VS Code Marketplace</a>
+                <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.prompilot" target="_blank" rel="noopener">View on VS Code Marketplace</a>
+                <a class="btn primary" href="https://open-vsx.org/extension/iNandi/prompilot" target="_blank" rel="noopener">View on VSX Registry</a>
               </div>
             </div>
           </article>
@@ -213,8 +213,8 @@
               </p>
               <p class="misc-release-info">Released on March 22, 2025</p>
               <div class="cta">
-                <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate"
-                  target="_blank" rel="noopener">View on VS Code Marketplace</a>
+                <a class="btn primary" href="https://marketplace.visualstudio.com/items?itemName=iNandi.documate" target="_blank" rel="noopener">View on VS Code Marketplace</a>
+                <a class="btn primary" href="https://open-vsx.org/extension/iNandi/documate" target="_blank" rel="noopener">View on VSX Registry</a>
               </div>
             </div>
           </article>
